@@ -207,10 +207,10 @@ DB_DEPLIB	= $(TOPLIBD)/libdb.a
 
 KRB5_BASE_DEPLIBS	= $(KRB5_DEPLIB) $(CRYPTO_DEPLIB) $(COM_ERR_DEPLIB)
 KRB4COMPAT_DEPLIBS	= $(KRB4_DEPLIB) $(DES425_DEPLIB) $(KRB5_BASE_DEPLBS)
-KRB5_KDC_DEPLIBS	= $(KDB5_DEPLIB) $(DB_DEPLIB) $(KRB4COMPAT_DEPLIBS)
+KDB5_DEPLIBS		= $(KDB5_DEPLIB) $(DB_DEPLIB)
 GSS_DEPLIBS		= $(GSS_DEPLIB)
 GSSRPC_DEPLIBS		= $(GSSRPC_DEPLIB) $(DYN_DEPLIB) $(GSS_DEPLIBS)
-KADM_COMM_DEPLIBS	= $(UTIL_DEPLIB) $(KDB5_DEPLIB) $(DB_DEPLIB) $(GSSRPC_DEPLIBS)
+KADM_COMM_DEPLIBS	= $(UTIL_DEPLIB) $(KDB5_DEPLIBS) $(GSSRPC_DEPLIBS)
 KADMSRV_DEPLIBS		= $(KADMSRV_DEPLIB) $(KADM_COMM_DEPLIBS)
 KADMCLNT_DEPLIBS	= $(KADMCLNT_DEPLIB) $(KADM_COMM_DEPLIBS)
 
@@ -231,10 +231,10 @@ DES425_LIB	= @DES425_LIB@
 
 KRB5_BASE_LIBS	= -lkrb5 -lcrypto -lcom_err $(GEN_LIB) $(LIBS)
 KRB4COMPAT_LIBS	= $(KRB4_LIB) -lkrb5 $(DES425_LIB) -lcrypto -lcom_err $(GEN_LIB) $(LIBS)
-KRB5_KDC_LIBS	= -lkdb5 $(DB_LIB) $(KRB4COMPAT_LIBS)
+KDB5_LIBS	= $(KDB5_LIB) $(DB_LIB)
 GSS_LIBS	= -lgssapi_krb5
 GSSRPC_LIBS	= -lgssrpc -ldyn $(GSS_LIBS)
-KADM_COMM_LIBS	= -lkrb5util -lkdb5 $(DB_LIB) $(GSSRPC_LIBS)
+KADM_COMM_LIBS	= -lkrb5util  $(KDB5_LIBS) $(GSSRPC_LIBS)
 KADMSRV_LIBS	= -lkadm5srv $(KADM_COMM_LIBS)
 KADMCLNT_LIBS	= -lkadm5clnt $(KADM_COMM_LIBS)
 
